# streamlit-multipage-framework

./: README.md  multipage.py  multipage_example.py  multipage_test.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
cache/: app1.pkl  app2.pkl
examples/00_trivial/: main.py
examples/01_saving_state/: main.py
examples/02_multipage/: main.py
examples/03_namespaces/: main.py
examples/04_auto_namespaces/: main.py
examples/05_directoy_structure/: main.py
examples/05_directoy_structure/pages/: __init__.py  input_data.py  result.py
examples/06_landing_page/: main.py
examples/07_custom_ui/: main.py
examples/basic/: main.py
examples/basic/pages/: __init__.py  home.py  multiply_variables.py  save_variables.py  sum_variables.py
examples/independent/: main.py
examples/independent/pages/: __init__.py  simple_calculator.py
pages/: multiply_variables.py  save_variables.py  sum_variables.py
src/streamlit_multipage/: __init__.py  helper.py  multipage.py
